# svitlo_bot

./: auth.py  bot.py  config.py  electricity_status.db  pyproject.toml  status.py
api/: heartbeat.txt  main.py
