[tool.poetry]
name = "svitlo-bot"
version = "0.1.1"
description = "This script getting online status of Tuya's socket and sending electricity updates to the Telegram chanel"
authors = ["Alex Verbovsky <alex.sanchos@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
schedule = "^1.2.2"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
